add GET /genres/{genreId}/movies
